[gd_scene load_steps=28 format=3 uid="uid://b3nrycqvovxs7"]

[ext_resource type="Script" uid="uid://0hjngdsxlm2y" path="res://Areais/Batalha/scripts/batalha2.gd" id="1_3dfwc"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="2_y3hu0"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_kvxgs"]
[ext_resource type="Material" uid="uid://cgnunqt42nrdv" path="res://texture/folderTres/materials/BATALHA.tres" id="4_ujq50"]
[ext_resource type="Texture2D" uid="uid://dhso7bk8h4wuw" path="res://texture/paleta/Screenshot_30-600x600.png" id="5_2wg0y"]
[ext_resource type="Script" uid="uid://dsslpkdcvssk1" path="res://Areais/Batalha/scripts/personagens.gd" id="6_k1fpl"]
[ext_resource type="Texture2D" uid="uid://45gjom0uh007" path="res://texture/folderTres/texturas/lado.tres" id="7_p6fqy"]
[ext_resource type="PackedScene" uid="uid://by72qrtpqld7j" path="res://Areais/Batalha/cenas/battle_arena.tscn" id="8_ucgic"]
[ext_resource type="StyleBox" uid="uid://ca1iiaaps77so" path="res://texture/folderTres/BoxTexture/intro.tres" id="9_sm3tu"]
[ext_resource type="PackedScene" uid="uid://b47uqjy5sunba" path="res://Areais/Batalha/cenas/panel_player.tscn" id="10_uoo3d"]
[ext_resource type="FontFile" uid="uid://ckj2wo0x2kbuu" path="res://texture/font/kenney_mini_square.ttf" id="11_1h456"]
[ext_resource type="StyleBox" uid="uid://ehj3gykeutk7" path="res://texture/folderTres/BoxTexture/zeno.tres" id="12_q50nm"]
[ext_resource type="StyleBox" uid="uid://cflugrgbnk4cx" path="res://texture/folderTres/BoxTexture/zeko.tres" id="13_vic7b"]
[ext_resource type="Texture2D" uid="uid://b6aeu0vlmykxt" path="res://texture/objetos/items/itensNormais.png" id="14_e833w"]
[ext_resource type="Script" uid="uid://c2dkrc2m800uw" path="res://Areais/Batalha/scripts/batalha_submenu_itens.gd" id="15_n63ce"]
[ext_resource type="StyleBox" uid="uid://qps2iq0yi4ti" path="res://texture/folderTres/BoxTexture/example_balloonLINE.tres" id="16_u28mr"]

[sub_resource type="Resource" id="Resource_s0ely"]
script = ExtResource("3_kvxgs")

[sub_resource type="Animation" id="Animation_nt1gt"]
resource_name = "E_panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 464), Vector2(0, 352)]
}

[sub_resource type="Animation" id="Animation_h7tth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 540)]
}

[sub_resource type="Animation" id="Animation_fq6de"]
resource_name = "S_panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 352), Vector2(0, 464)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nt1gt"]
_data = {
&"E_panel": SubResource("Animation_nt1gt"),
&"RESET": SubResource("Animation_h7tth"),
&"S_panel": SubResource("Animation_fq6de")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_eohca"]
atlas = ExtResource("14_e833w")
region = Rect2(96, 720, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_h7tth"]
font = ExtResource("11_1h456")
font_size = 64
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq6de"]
atlas = ExtResource("14_e833w")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucvin"]
atlas = ExtResource("14_e833w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_otx5r"]
atlas = ExtResource("14_e833w")
region = Rect2(112, 656, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y71rf"]
atlas = ExtResource("14_e833w")
region = Rect2(176, 0, 16, 16)

[node name="Batalha2D" type="Node2D"]
editor_description = "NÃO ABRIR ESSE NEGÓCIO DIRETAMENTE "
script = ExtResource("1_3dfwc")
metadata/_custom_type_script = "uid://0hjngdsxlm2y"
metadata/_edit_vertical_guides_ = [-112.0]

[node name="Camera" type="Node2D" parent="."]
visible = false
script = ExtResource("2_y3hu0")
priority = 5
tween_resource = SubResource("Resource_s0ely")
draw_limits = true
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="AnimationPanel" type="AnimationPlayer" parent="."]
root_node = NodePath("../BatalhaCanvas")
libraries = {
&"": SubResource("AnimationLibrary_nt1gt")
}

[node name="BatalhaCanvas" type="CanvasLayer" parent="."]
layer = 0
metadata/_edit_vertical_guides_ = [256.0]

[node name="FundoRect" type="TextureRect" parent="BatalhaCanvas"]
material = ExtResource("4_ujq50")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_2wg0y")
expand_mode = 1

[node name="Personagens" type="Node2D" parent="BatalhaCanvas"]
scale = Vector2(4, 4)
script = ExtResource("6_k1fpl")
metadata/_custom_type_script = "uid://dsslpkdcvssk1"

[node name="player1" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(64, 56)

[node name="makerlado" type="Sprite2D" parent="BatalhaCanvas/Personagens/player1"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_p6fqy")
region_rect = Rect2(208, 48, 16, 16)

[node name="player2" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(24, 32)

[node name="makerlado" type="Sprite2D" parent="BatalhaCanvas/Personagens/player2"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_p6fqy")
region_rect = Rect2(208, 48, 16, 16)

[node name="player3" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(24, 80)

[node name="makerlado" type="Sprite2D" parent="BatalhaCanvas/Personagens/player3"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_p6fqy")
region_rect = Rect2(208, 48, 16, 16)

[node name="inimigo1" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(224, 56)

[node name="makeroutrolado" type="Sprite2D" parent="BatalhaCanvas/Personagens/inimigo1"]
scale = Vector2(-0.5, 0.5)
texture = ExtResource("7_p6fqy")
region_rect = Rect2(208, 48, 16, 16)

[node name="inimigo2" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(264, 32)

[node name="makeroutrolado" type="Sprite2D" parent="BatalhaCanvas/Personagens/inimigo2"]
scale = Vector2(-0.5, 0.5)
texture = ExtResource("7_p6fqy")
region_rect = Rect2(208, 48, 16, 16)

[node name="inimigo3" type="Marker2D" parent="BatalhaCanvas/Personagens"]
position = Vector2(264, 80)

[node name="makeroutrolado" type="Sprite2D" parent="BatalhaCanvas/Personagens/inimigo3"]
scale = Vector2(-0.5, 0.5)
texture = ExtResource("7_p6fqy")
region_rect = Rect2(208, 48, 16, 16)

[node name="Control" type="Control" parent="BatalhaCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BATTLE_ARENA" parent="BatalhaCanvas/Control" instance=ExtResource("8_ucgic")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 432.0
offset_top = 111.0
offset_right = 576.0
offset_bottom = 255.0

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control"]
z_index = 5
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_top = 540.0
offset_right = 1152.0
offset_bottom = 727.99927
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="BatalhaCanvas/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("9_sm3tu")

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
z_index = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="PanelPlayer1" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer" instance=ExtResource("10_uoo3d")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PanelPlayer2" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer" instance=ExtResource("10_uoo3d")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PanelPlayer3" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer" instance=ExtResource("10_uoo3d")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PanelPlayer4" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer" instance=ExtResource("10_uoo3d")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 4

[node name="panel1" type="Button" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 2
theme_override_fonts/font = ExtResource("11_1h456")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("12_q50nm")
theme_override_styles/focus = ExtResource("13_vic7b")
button_mask = 0
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel1/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="icone" type="TextureRect" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel1/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_eohca")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel1/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "ATK"
label_settings = SubResource("LabelSettings_h7tth")
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel2" type="Button" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 2
theme_override_styles/normal = ExtResource("12_q50nm")
theme_override_styles/focus = ExtResource("13_vic7b")
button_mask = 0

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="icone" type="TextureRect" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_fq6de")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "ITM"
label_settings = SubResource("LabelSettings_h7tth")
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel3" type="Button" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_styles/normal = ExtResource("12_q50nm")
theme_override_styles/focus = ExtResource("13_vic7b")
button_mask = 0

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="icone" type="TextureRect" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_ucvin")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel3/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "EXE"
label_settings = SubResource("LabelSettings_h7tth")
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel4" type="Button" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 2
theme_override_styles/normal = ExtResource("12_q50nm")
theme_override_styles/focus = ExtResource("13_vic7b")
button_mask = 0

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel4/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="icone" type="TextureRect" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel4/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_otx5r")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel4/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "DEF"
label_settings = SubResource("LabelSettings_h7tth")
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel5" type="Button" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_filter = 2
theme_override_styles/normal = ExtResource("12_q50nm")
theme_override_styles/focus = ExtResource("13_vic7b")
button_mask = 0

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel5/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="icone" type="TextureRect" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel5/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_y71rf")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="BatalhaCanvas/Control/MarginContainer/VBoxContainer/HBoxContainer/panel5/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "MRC"
label_settings = SubResource("LabelSettings_h7tth")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BatalhaCanvas/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="itens" type="MarginContainer" parent="BatalhaCanvas/Control/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("15_n63ce")

[node name="PanelContainer" type="PanelContainer" parent="BatalhaCanvas/Control/VBoxContainer/HBoxContainer/itens"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("12_q50nm")

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/Control/VBoxContainer/HBoxContainer/itens/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemList" type="ItemList" parent="BatalhaCanvas/Control/VBoxContainer/HBoxContainer/itens/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(0.262745, 0.52549, 0.894118, 1)
theme_override_colors/font_selected_color = Color(0.466667, 0.886275, 0.827451, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.188235, 0.443137, 1)
theme_override_colors/guide_color = Color(0.0823529, 0.113725, 0.266667, 1)
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 32
theme_override_constants/outline_size = 16
theme_override_constants/icon_margin = 16
theme_override_fonts/font = ExtResource("11_1h456")
theme_override_font_sizes/font_size = 16
theme_override_styles/selected = ExtResource("16_u28mr")
theme_override_styles/selected_focus = ExtResource("16_u28mr")
icon_scale = 1.6
fixed_icon_size = Vector2i(16, 16)

[node name="Control" type="Control" parent="BatalhaCanvas/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="BatalhaCanvas/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
